fix: prevent board headers from covering task cards

--- a/src/app/board/board.scss
+++ b/src/app/board/board.scss
@@ -385,7 +385,7 @@ textarea {
 
 .column-header {
   position: sticky;
-  top: 58px;
+  top: 0;
   z-index: 5;
   display: flex;
   min-height: 40px;
